@@ -9,7 +9,7 @@ Cacti CHANGELOG
 -feature: add graph title to graphs page
 -feature: add links to Graph Management and Data Sources to Device Edit Screen
 -feature: add links to Graph Template and Host Edit to Graph Edit Screen
-
+-feature: add links to Data Template and Host Edit to Data Source Edit Screen
 
 0.8.7b
 -bug#0000855: Unnecessary (and faulty) DEF generation for CF:AVERAGE
